Removed 'overflow:hidden' from header to resolve css issue when health/willpower are over 10

--- a/css/vtm5e.css
+++ b/css/vtm5e.css
@@ -231,7 +231,6 @@
   -webkit-box-flex: 0;
   -ms-flex: 0 0 215px;
   flex: 0 0 215px;
-  overflow: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
